--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<script>
 		function add()
 		{
+			var li = document.createElement("li");
+			var inputVal = document.getElementById('todo').value;
 			
 		}
 	</script>
