--- a/index.html
+++ b/index.html
@@ -1,17 +1,56 @@
+<!-- Intro- Displays a matrix-like screen.  -->
+<!-- Details- https://www.reddit.com/r/programming/comments/1ag0c3/someone_posted_an_htmljavascript_implementation -->
+
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Todo App</title>
-	<script>
-		function add()
-		{
-			
-		}
-	</script>
+	<meta charset="utf-8"/>
+	<meta name="keywords" content="FOS, code, git, github, open source, html"/>
+	<meta name="description" content="The first session of FOS"/>
+    <meta name="author" content="Parth Krishna"/>
+    
+    <title>FOS Session 1</title>
 </head>
-<body>
-	<h1>Todo App</h1>
-	<input type="text" name="Description" id="todo">
-	<button onclick="add">Add</button>
+<body style="margin:0";>
+	<div style="position: absolute; top: 30px; width: 100%; color: rgb(50,255,50);">
+    	<div style="text-align: center">
+			<h1>
+				<a href="https://github.com/parthkrishna1611/FOS_Session1" style="text-decoration: none; color: rgb(50,255,50);">FOS Session 1</a>
+			</h1>
+				<h5 style="margin:-10px;">A demo of how to use git</h5>
+    	</div>
+	</div>
+	<canvas id=q />
+	<script>
+		var q = document.getElementById('q')
+		var s = window.screen;
+		var w = q.width = s.width;
+		var h = q.height = s.height;
+		var p = Array(256).join(1).split('');
+		var c = q.getContext("2d");
+		var m = Math;
+		setInterval(function()
+			{
+				c.fillStyle = "rgba(0,0,0,0.05)";
+				c.fillRect(0,0,w,h);
+				c.fillStyle = "rgba(0,255,0,1)";
+				p=p.map(function(v,i)
+				{
+					c.fillText(String.fromCharCode(m.floor(2720+m.random()*33)),i*10,v);
+					v+=10;
+					if(v>768+m.random()*10000)
+						v=0;
+					return v}
+				)
+			},33)
+	</script>
 </body>
 </html>
+
+<!-- Even shorter version -->
+<!-- 
+
+<body style=margin:0 onload="for(s=document,w=q.width=s.width,h=q.height=s.height,m=Math.random,p=[];!p[255];p.push(1));setInterval('9Style=\'rgba(0,0,0,.05)\'9Rect(0,0,w,h)9Style=\'#0F0\';p.map(function(v,i){9Text(String.fromCharCode(3e4+m()*33),i*10,v);p[i]=v>758+m()*1e4?0:v+10})'.replace(/9/g,';q.getContext(\'2d\').fill'),33)"><canvas id=q>
+
+ -->
